Added complete process

--- a/src/data_engineering/GetImgsDf.ipynb
+++ b/src/data_engineering/GetImgsDf.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,13 @@
     "import requests\n",
     "from PIL import Image\n",
     "from io import BytesIO\n",
-    "import os\n"
+    "import os\n",
+    "import random\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
        "[264673 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "36it [00:36,  1.00s/it]"
+      "36it [00:35,  1.01it/s]"
      ]
     },
     {
@@ -216,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +245,7 @@
        "0.1551688309725586"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1265,7 @@
        "[2997468 rows x 3 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1278,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1396,7 +1397,7 @@
        "[201451 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1408,14 +1409,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_498439/3044125367.py:1: SettingWithCopyWarning:\n",
+      "/tmp/ipykernel_417821/3044125367.py:1: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -1442,7 +1443,7 @@
        "Name: filename, Length: 201451, dtype: object"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1454,14 +1455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_498439/3678596583.py:2: SettingWithCopyWarning:\n",
+      "/tmp/ipykernel_417821/3678596583.py:2: SettingWithCopyWarning:\n",
       "\n",
       "\n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -1479,13 +1480,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random\n",
+    "numCaseToDownload = 40000\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "len(filesDf['CaseID'].unique())\n",
-    "numCaseToDownload = 20000\n",
     "targetCaseId = filesDf['CaseID'].unique().tolist()\n",
     "random.shuffle(targetCaseId)\n",
     "targetCaseId = targetCaseId[:numCaseToDownload]\n",
@@ -1494,21 +1502,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sinkDir = \"/home/alextay96/Desktop/new_workspace/DLDataPipeline/data/imgs\"\n",
+    "localFiles = os.listdir(sinkDir)\n",
+    "downloadFileDf = downloadFileDf[~downloadFileDf[\"filename\"].isin(localFiles)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "98121it [38:54, 42.03it/s]\n"
+      "100775it [48:05, 34.92it/s]\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "\n",
-    "sinkDir = \"/home/alextay96/Desktop/new_workspace/DLDataPipeline/data/imgs\"\n",
     "os.makedirs(sinkDir, exist_ok=True)\n",
     "s = requests.Session()\n",
     "\n",
@@ -1523,11 +1540,343 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CaseID</th>\n",
+       "      <th>iDOCID</th>\n",
+       "      <th>StdDocDesc</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10000008</td>\n",
+       "      <td>437283237.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000008_437283237.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>10000449</td>\n",
+       "      <td>437304372.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000449_437304372.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>10000309</td>\n",
+       "      <td>437331181.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000309_437331181.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>10001070</td>\n",
+       "      <td>437336634.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10001070_437336634.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>10001217</td>\n",
+       "      <td>437355562.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10001217_437355562.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2909612</th>\n",
+       "      <td>13076951</td>\n",
+       "      <td>595070636.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13076951_595070636.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13076...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2910322</th>\n",
+       "      <td>13074208</td>\n",
+       "      <td>595299193.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13074208_595299193.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13074...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2910367</th>\n",
+       "      <td>13079408</td>\n",
+       "      <td>595312859.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13079408_595312859.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13079...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2912183</th>\n",
+       "      <td>13079952</td>\n",
+       "      <td>595854084.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13079952_595854084.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13079...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2933771</th>\n",
+       "      <td>12913298</td>\n",
+       "      <td>602508321.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>12913298_602508321.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/12913...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100775 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           CaseID       iDOCID       StdDocDesc                filename  \\\n",
+       "6        10000008  437283237.0       Front View  10000008_437283237.JPG   \n",
+       "12       10000449  437304372.0       Front View  10000449_437304372.JPG   \n",
+       "19       10000309  437331181.0       Front View  10000309_437331181.JPG   \n",
+       "20       10001070  437336634.0       Front View  10001070_437336634.JPG   \n",
+       "21       10001217  437355562.0       Front View  10001217_437355562.JPG   \n",
+       "...           ...          ...              ...                     ...   \n",
+       "2909612  13076951  595070636.0  Rear View Right  13076951_595070636.JPG   \n",
+       "2910322  13074208  595299193.0  Rear View Right  13074208_595299193.JPG   \n",
+       "2910367  13079408  595312859.0  Rear View Right  13079408_595312859.JPG   \n",
+       "2912183  13079952  595854084.0  Rear View Right  13079952_595854084.JPG   \n",
+       "2933771  12913298  602508321.0  Rear View Right  12913298_602508321.JPG   \n",
+       "\n",
+       "                                                       url  \n",
+       "6        http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "12       http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "19       http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "20       http://192.168.1.7:8888/buckets/raw_imgs/10001...  \n",
+       "21       http://192.168.1.7:8888/buckets/raw_imgs/10001...  \n",
+       "...                                                    ...  \n",
+       "2909612  http://192.168.1.7:8888/buckets/raw_imgs/13076...  \n",
+       "2910322  http://192.168.1.7:8888/buckets/raw_imgs/13074...  \n",
+       "2910367  http://192.168.1.7:8888/buckets/raw_imgs/13079...  \n",
+       "2912183  http://192.168.1.7:8888/buckets/raw_imgs/13079...  \n",
+       "2933771  http://192.168.1.7:8888/buckets/raw_imgs/12913...  \n",
+       "\n",
+       "[100775 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "downloadFileDf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "downloadFileDf.to_parquet(f\"../../data/imgs_metadata/{vehicleType}.parquet\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>CaseID</th>\n",
+       "      <th>iDOCID</th>\n",
+       "      <th>StdDocDesc</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>url</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>10000008</td>\n",
+       "      <td>437283237.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000008_437283237.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>10000449</td>\n",
+       "      <td>437304372.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000449_437304372.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>10000309</td>\n",
+       "      <td>437331181.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10000309_437331181.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10000...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>10001070</td>\n",
+       "      <td>437336634.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10001070_437336634.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>10001217</td>\n",
+       "      <td>437355562.0</td>\n",
+       "      <td>Front View</td>\n",
+       "      <td>10001217_437355562.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/10001...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2909612</th>\n",
+       "      <td>13076951</td>\n",
+       "      <td>595070636.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13076951_595070636.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13076...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2910322</th>\n",
+       "      <td>13074208</td>\n",
+       "      <td>595299193.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13074208_595299193.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13074...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2910367</th>\n",
+       "      <td>13079408</td>\n",
+       "      <td>595312859.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13079408_595312859.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13079...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2912183</th>\n",
+       "      <td>13079952</td>\n",
+       "      <td>595854084.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>13079952_595854084.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/13079...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2933771</th>\n",
+       "      <td>12913298</td>\n",
+       "      <td>602508321.0</td>\n",
+       "      <td>Rear View Right</td>\n",
+       "      <td>12913298_602508321.JPG</td>\n",
+       "      <td>http://192.168.1.7:8888/buckets/raw_imgs/12913...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100775 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           CaseID       iDOCID       StdDocDesc                filename  \\\n",
+       "6        10000008  437283237.0       Front View  10000008_437283237.JPG   \n",
+       "12       10000449  437304372.0       Front View  10000449_437304372.JPG   \n",
+       "19       10000309  437331181.0       Front View  10000309_437331181.JPG   \n",
+       "20       10001070  437336634.0       Front View  10001070_437336634.JPG   \n",
+       "21       10001217  437355562.0       Front View  10001217_437355562.JPG   \n",
+       "...           ...          ...              ...                     ...   \n",
+       "2909612  13076951  595070636.0  Rear View Right  13076951_595070636.JPG   \n",
+       "2910322  13074208  595299193.0  Rear View Right  13074208_595299193.JPG   \n",
+       "2910367  13079408  595312859.0  Rear View Right  13079408_595312859.JPG   \n",
+       "2912183  13079952  595854084.0  Rear View Right  13079952_595854084.JPG   \n",
+       "2933771  12913298  602508321.0  Rear View Right  12913298_602508321.JPG   \n",
+       "\n",
+       "                                                       url  \n",
+       "6        http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "12       http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "19       http://192.168.1.7:8888/buckets/raw_imgs/10000...  \n",
+       "20       http://192.168.1.7:8888/buckets/raw_imgs/10001...  \n",
+       "21       http://192.168.1.7:8888/buckets/raw_imgs/10001...  \n",
+       "...                                                    ...  \n",
+       "2909612  http://192.168.1.7:8888/buckets/raw_imgs/13076...  \n",
+       "2910322  http://192.168.1.7:8888/buckets/raw_imgs/13074...  \n",
+       "2910367  http://192.168.1.7:8888/buckets/raw_imgs/13079...  \n",
+       "2912183  http://192.168.1.7:8888/buckets/raw_imgs/13079...  \n",
+       "2933771  http://192.168.1.7:8888/buckets/raw_imgs/12913...  \n",
+       "\n",
+       "[100775 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.read_parquet(\"/home/alextay96/Desktop/new_workspace/DLDataPipeline/data/imgs_metadata/Saloon - 4 Dr.parquet\")"
    ]
   }
  ],
