--- a/src/train/E2E.ipynb
+++ b/src/train/E2E.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -445,7 +445,7 @@
        "[621792 rows x 60 columns]"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +465,7 @@
        "34"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,27 +527,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = realTestDataDf[allInputFeature]\n",
-    "Y_train = realTestDataDf[targetCol]\n",
-    "X_test = trainDf[allInputFeature]\n",
-    "Y_test = trainDf[targetCol]\n",
+    "# X_train = trainDf[allInputFeature]\n",
+    "# Y_train = trainDf[targetCol]\n",
+    "X = realTestDataDf[allInputFeature]\n",
+    "Y = realTestDataDf[targetCol]\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y)\n",
+    "\n",
     "train_pool = Pool(X_train, Y_train, cat_features=caseFeatures + allVisionFeatures)\n",
     "test_pool = Pool(X_test, Y_test, cat_features=caseFeatures + allVisionFeatures)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cbc83ff5834442e9bbfa37803785bd21",
+       "model_id": "3c48702e341b44619d5e6aa56e548c93",
        "version_major": 2,
        "version_minor": 0
       },
@@ -562,17 +564,34 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Learning rate set to 0.215315\n",
-      "0:\tlearn: 0.0151429\ttest: 0.0301043\tbest: 0.0301043 (0)\ttotal: 470ms\tremaining: 46.5s\n",
-      "5:\tlearn: 0.0213333\ttest: 0.0204492\tbest: 0.0301043 (0)\ttotal: 2.47s\tremaining: 38.7s\n",
-      "10:\tlearn: 0.0286334\ttest: 0.0368984\tbest: 0.0368984 (10)\ttotal: 4.52s\tremaining: 36.5s\n",
-      "15:\tlearn: 0.0318149\ttest: 0.0496658\tbest: 0.0496658 (15)\ttotal: 6.61s\tremaining: 34.7s\n",
-      "20:\tlearn: 0.0337879\ttest: 0.0542319\tbest: 0.0542319 (20)\ttotal: 8.68s\tremaining: 32.6s\n",
-      "25:\tlearn: 0.0348731\ttest: 0.0618517\tbest: 0.0618517 (25)\ttotal: 10.7s\tremaining: 30.4s\n",
-      "30:\tlearn: 0.0356623\ttest: 0.0634242\tbest: 0.0634242 (30)\ttotal: 12.7s\tremaining: 28.2s\n",
-      "35:\tlearn: 0.0369201\ttest: 0.0636307\tbest: 0.0636307 (35)\ttotal: 14.7s\tremaining: 26.2s\n",
-      "40:\tlearn: 0.0368461\ttest: 0.0673176\tbest: 0.0673176 (40)\ttotal: 16.5s\tremaining: 23.8s\n"
+      "Learning rate set to 0.200546\n",
+      "0:\tlearn: 0.0109503\ttest: 0.0114432\tbest: 0.0114432 (0)\ttotal: 353ms\tremaining: 35s\n",
+      "10:\tlearn: 0.0277211\ttest: 0.0292986\tbest: 0.0292986 (10)\ttotal: 3.29s\tremaining: 26.7s\n",
+      "20:\tlearn: 0.0334429\ttest: 0.0342310\tbest: 0.0342310 (20)\ttotal: 6.26s\tremaining: 23.6s\n",
+      "30:\tlearn: 0.0348570\ttest: 0.0345270\tbest: 0.0345270 (30)\ttotal: 9.1s\tremaining: 20.3s\n",
+      "40:\tlearn: 0.0363038\ttest: 0.0353162\tbest: 0.0353162 (40)\ttotal: 11.9s\tremaining: 17.2s\n",
+      "50:\tlearn: 0.0380138\ttest: 0.0366972\tbest: 0.0366972 (50)\ttotal: 15.1s\tremaining: 14.5s\n",
+      "60:\tlearn: 0.0388688\ttest: 0.0375851\tbest: 0.0375851 (60)\ttotal: 18.1s\tremaining: 11.6s\n",
+      "70:\tlearn: 0.0410720\ttest: 0.0376837\tbest: 0.0376837 (70)\ttotal: 21.1s\tremaining: 8.6s\n",
+      "80:\tlearn: 0.0430122\ttest: 0.0372891\tbest: 0.0376837 (70)\ttotal: 24.1s\tremaining: 5.64s\n",
+      "90:\tlearn: 0.0440973\ttest: 0.0374864\tbest: 0.0376837 (70)\ttotal: 27.1s\tremaining: 2.67s\n",
+      "99:\tlearn: 0.0454127\ttest: 0.0371905\tbest: 0.0376837 (70)\ttotal: 29.7s\tremaining: 0us\n",
+      "\n",
+      "bestTest = 0.03768373286\n",
+      "bestIteration = 70\n",
+      "\n",
+      "Shrink model to first 71 iterations.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<catboost.core.CatBoostClassifier at 0x7fbfeeb9bc40>"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -583,12 +602,12 @@
     "    # task_type=\"GPU\",\n",
     "    class_names=targetCol,\n",
     ")\n",
-    "clf.fit(train_pool, eval_set=test_pool, metric_period=10, plot=True, verbose=5)"
+    "clf.fit(train_pool, eval_set=test_pool, metric_period=10, plot=True, verbose=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -622,14 +641,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.08943044671352011\n"
+      "Accuracy: 0.03768373285982046\n"
      ]
     }
    ],
@@ -640,16 +659,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4673418589373764"
+       "0.513721731123999"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -672,12 +691,12 @@
       "\n",
       "\n",
       "\n",
-      "Avg Precision : 0.858405064624816\n",
-      "Avg Recall : 0.4555272874779443\n",
-      "Avg F1 : 0.5693233638331069\n",
-      "Low Recall Count : 6\n",
-      "High Recall Count : 12\n",
-      "all acc : [0.08943044671352011]\n"
+      "Avg Precision : 0.6639490408135647\n",
+      "Avg Recall : 0.4196833606905915\n",
+      "Avg F1 : 0.478214976189253\n",
+      "Low Recall Count : 9\n",
+      "High Recall Count : 11\n",
+      "all acc : [0.03768373285982046]\n"
      ]
     }
    ],
@@ -744,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -780,11 +799,11 @@
          ],
          "xaxis": "x",
          "y": [
-          0.4555272874779443,
-          0.858405064624816,
-          0.5693233638331069,
-          0.08943044671352011,
-          0.4673418589373764
+          0.4196833606905915,
+          0.6639490408135647,
+          0.478214976189253,
+          0.03768373285982046,
+          0.513721731123999
          ],
          "yaxis": "y"
         }
@@ -1660,7 +1679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -1724,40 +1743,40 @@
          ],
          "xaxis": "x",
          "y": [
-          0.7365921582997434,
-          0.7699591553720978,
-          0.39119496855345914,
-          0.021791491303686426,
-          0.7289934632226946,
-          0.6887136779642392,
-          0.5964140941690053,
-          0.5348605431707925,
-          0.5233151699282894,
-          0.13519273836699808,
-          0.4685426314355761,
-          0.7041109118499104,
-          0.32754283846244653,
-          0.4105119468483889,
-          0.09645911961613594,
-          0.2936753311195084,
-          0.4419731411062623,
-          0.37386325362074774,
-          0.6571629190548507,
-          0.7010070362944724,
-          0.20796714793889934,
-          0.4549489843099781,
-          0.12589408643675074,
-          0.7168509688546211,
-          0.01210442373877277,
-          0.6071284247959267,
-          0.3224404571611253,
-          0.8159104639613348,
-          0.6212966360856269,
-          0.4720290636619079,
-          0.5684657417375937,
-          0.21198965748395954,
-          0.6396136477671851,
-          0.10941148055712101
+          0.7882594206613689,
+          0.8881161173268823,
+          0.5530660377358491,
+          0.01904761904761905,
+          0.8125,
+          0.8041077738515902,
+          0.25190839694656486,
+          0.3028237585199611,
+          0.672347266881029,
+          0.282948157401624,
+          0.7047619047619048,
+          0.6217199272538322,
+          0.36013590033975085,
+          0.5657501494321578,
+          0.1717948717948718,
+          0.39839797639123103,
+          0.42183288409703507,
+          0.26211734693877553,
+          0.6278959810874705,
+          0.6593642611683849,
+          0.1601489757914339,
+          0.1377245508982036,
+          0.18479408658922913,
+          0.5042801556420233,
+          0.013348164627363738,
+          0.49642857142857144,
+          0.35285714285714287,
+          0.7134468584850264,
+          0.658904971680302,
+          0.2835538752362949,
+          0.2579710144927536,
+          0.13144329896907217,
+          0.16451612903225807,
+          0.04092071611253197
          ],
          "yaxis": "y"
         }
@@ -1780,8 +1799,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.4555272874779443,
-          "y1": 0.4555272874779443,
+          "y0": 0.4196833606905915,
+          "y1": 0.4196833606905915,
           "yref": "y"
          }
         ],
@@ -2619,7 +2638,7 @@
          ],
          "tickmode": "array",
          "tickvals": [
-          "0.5",
+          "0.4",
           0.2,
           0.5,
           0.7
@@ -2651,7 +2670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -2715,40 +2734,40 @@
          ],
          "xaxis": "x",
          "y": [
-          0.9911184448403489,
-          0.9417345789438812,
-          0.9504757935681045,
-          0.5749163879598662,
-          0.9691824164697941,
-          0.9554108571024135,
-          0.9248809264766326,
-          0.9454634955179024,
-          0.8257397110056576,
-          0.7902858588413862,
-          0.859434179100003,
-          0.882263463876421,
-          0.9083697445131395,
-          0.8648378436064211,
-          0.6941449433601747,
-          0.9837365110213266,
-          0.8151475052541449,
-          0.8054021159067503,
-          0.9889661612562357,
-          0.9985015310443677,
-          0.667366123887863,
-          0.8701727492482755,
-          0.698202812179905,
-          0.9758898271643911,
-          0.47843397478433974,
-          0.9782311448724905,
-          0.9441551603089164,
-          0.9199021000011545,
-          0.9054138367470631,
-          0.9494747659282942,
-          0.9456308711225249,
-          0.6071493874565734,
-          0.9281315414252344,
-          0.6476054324517513
+          0.7503660322108345,
+          0.8328370905997448,
+          0.6448951529735304,
+          0.41379310344827586,
+          0.7548734964744919,
+          0.7479457682826622,
+          0.6895522388059702,
+          0.6820175438596491,
+          0.6721311475409836,
+          0.6180081855388813,
+          0.6948356807511737,
+          0.8170023898941619,
+          0.668769716088328,
+          0.7138009049773756,
+          0.5095057034220533,
+          0.618051013734467,
+          0.6750539180445723,
+          0.5922190201729106,
+          0.6484375,
+          0.6417224080267558,
+          0.6187050359712231,
+          0.75,
+          0.54858934169279,
+          0.6908315565031983,
+          0.5,
+          0.639963167587477,
+          0.6390685640362225,
+          0.7874270900842515,
+          0.75,
+          0.7142857142857143,
+          0.6953125,
+          0.5483870967741935,
+          0.7132867132867133,
+          0.5925925925925926
          ],
          "yaxis": "y"
         }
@@ -2771,8 +2790,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.4555272874779443,
-          "y1": 0.4555272874779443,
+          "y0": 0.4196833606905915,
+          "y1": 0.4196833606905915,
           "yref": "y"
          }
         ],
@@ -3610,7 +3629,7 @@
          ],
          "tickmode": "array",
          "tickvals": [
-          "0.5",
+          "0.4",
           0.2,
           0.5,
           0.7
@@ -3642,7 +3661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -3706,40 +3725,40 @@
          ],
          "xaxis": "x",
          "y": [
-          0.8451068982140655,
-          0.8472276861819439,
-          0.5542661563075926,
-          0.041991352566138215,
-          0.8321018508457387,
-          0.8004314896198468,
-          0.725187438981621,
-          0.6832167897628876,
-          0.6406294114325509,
-          0.23088790961078312,
-          0.6064587101619436,
-          0.7831837699187013,
-          0.48147418933935787,
-          0.5567512058953277,
-          0.16938089053185465,
-          0.45231950429450735,
-          0.5731722001466838,
-          0.5106742948732219,
-          0.7896244555193658,
-          0.8237164701192721,
-          0.31711402704104014,
-          0.5975061738391159,
-          0.2133234704183678,
-          0.8265501366108804,
-          0.02361147498035106,
-          0.7492457174203951,
-          0.48071194518915694,
-          0.8647912393231965,
-          0.736918467576371,
-          0.630571195662477,
-          0.710071933318955,
-          0.3142552939784692,
-          0.757324091837366,
-          0.1871965288060884
+          0.7688461057632204,
+          0.8595887905173044,
+          0.5954610379304872,
+          0.03641881638846738,
+          0.7826273919587186,
+          0.7750106428267347,
+          0.3690095846645367,
+          0.41942009440323674,
+          0.6722391898408616,
+          0.38817480719794345,
+          0.6997635933806148,
+          0.7061079964591326,
+          0.4681634155318366,
+          0.6312104034678226,
+          0.2569511025886865,
+          0.484491156113817,
+          0.5192148189106994,
+          0.363395225464191,
+          0.6380014412683161,
+          0.6504237288135593,
+          0.2544378698224852,
+          0.23271500843170323,
+          0.27646129541864134,
+          0.582995951417004,
+          0.02600216684723727,
+          0.5591311343523732,
+          0.45467096180395766,
+          0.7486136783733826,
+          0.7015075376884421,
+          0.4059539918809202,
+          0.3763213530655391,
+          0.2120582120582121,
+          0.2673656618610747,
+          0.07655502392344497
          ],
          "yaxis": "y"
         }
@@ -3762,8 +3781,8 @@
           "x0": 0,
           "x1": 1,
           "xref": "x domain",
-          "y0": 0.4555272874779443,
-          "y1": 0.4555272874779443,
+          "y0": 0.4196833606905915,
+          "y1": 0.4196833606905915,
           "yref": "y"
          }
         ],
@@ -4601,7 +4620,7 @@
          ],
          "tickmode": "array",
          "tickvals": [
-          "0.5",
+          "0.4",
           0.2,
           0.5,
           0.7
