--- a/src/feature/PartlistLabel.ipynb
+++ b/src/feature/PartlistLabel.ipynb
@@ -230,7 +230,7 @@
     }
    ],
    "source": [
-    "wr.config.s3_endpoint_url = \"http://192.168.1.7:8333\"\n",
+    "wr.config.s3_endpoint_url = \"http://192.168.1.4:8333\"\n",
     "bucket = \"scope_part\"\n",
     "\n",
     "partDf = wr.s3.read_parquet(f\"s3://{bucket}/\")\n",
@@ -4639,7 +4639,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
