--- a/src/train/PartlistPredition.ipynb
+++ b/src/train/PartlistPredition.ipynb
@@ -483,7 +483,7 @@
    "source": [
     "allVisionFeatures = [x for x in multilabelDf.columns if \"vision_\" in x]\n",
     "caseFeatures = [\n",
-    "    # \"Circumstances_of_Accident\",\n",
+    "    \"Circumstances_of_Accident\",\n",
     "   \n",
     "]\n",
     "allInputFeature = caseFeatures + allVisionFeatures\n",
@@ -10194,7 +10194,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
