Added case study analysis

--- a/src/analysis/case_study/case_study_result_analysis.ipynb
+++ b/src/analysis/case_study/case_study_result_analysis.ipynb
@@ -468,12 +468,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.13333333333333333"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "afterRepairError = 4 / 30\n",
+    "afterRepairError"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "afterRepairError = 4 / 30"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -492,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
