--- a/src/clean/view_issues.ipynb
+++ b/src/clean/view_issues.ipynb
@@ -790,9 +790,9 @@
    "outputs": [],
    "source": [
     "targetPartToCorrect = [\"vision_bonnet\", \"vision_bumper_front\", \n",
-    "# \"vision_windscreen_front\", \n",
-    "\"vision_engine\", \"vision_headlamp_lh\",\"vision_headlamp_rh\", \n",
-    "\"vision_grille\", \"vision_bumper_rear\", \"vision_rear_compartment\"]"
+    "\"vision_windscreen_front\", \n",
+    "\"vision_engine\",\n",
+    "\"vision_grille\", \"vision_bumper_rear\", \"vision_rear_compartment\",  'vision_wheel']"
    ]
   },
   {
@@ -1443,7 +1443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
   },
   "orig_nbformat": 4,
   "vscode": {
