--- a/src/analysis/case_study/case_study.ipynb
+++ b/src/analysis/case_study/case_study.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -47,21 +47,21 @@
        " 'grille']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "predDf = pd.read_csv(\n",
-    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_3/case_study_pred.csv\"\n",
+    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_4/case_study_pred.csv\"\n",
     ")\n",
     "gtDf = pd.read_csv(\n",
-    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_3/case_study_gt.csv\"\n",
+    "    \"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/case_study/case_study_4/case_study_gt.csv\"\n",
     ")\n",
-    "visionPredDf1 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/saloon_new_labels/Saloon - 4 Dr_imgs_pred_output.csv\")\n",
-    "visionPredDf2 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/hatchback_new_labels/Hatchback - 5 Dr_imgs_pred_output.csv\")\n",
-    "visionPredDf3 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/suv_new_labels/SUV - 5 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf1 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/saloon_new_labels_pos_weight/Saloon - 4 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf2 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/hatchback_new_labels_pos_weight/Hatchback - 5 Dr_imgs_pred_output.csv\")\n",
+    "visionPredDf3 = pd.read_csv(\"/home/alextay96/Desktop/all_workspace/new_workspace/DLDataPipeline/data/results/suv_new_labels_pos_weight/SUV - 5 Dr_imgs_pred_output.csv\")\n",
     "visionPredDf = pd.concat([visionPredDf1, visionPredDf2,visionPredDf3 ])\n",
     "majorParts = [x.replace(\"vision_\", \"\") for x in  visionPredDf.columns]\n",
     "majorParts"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
        "30"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -167,9 +167,9 @@
        "      <td>10053736</td>\n",
        "      <td>air_conditioning</td>\n",
        "      <td>-1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -179,9 +179,9 @@
        "      <td>10053736</td>\n",
        "      <td>airbag</td>\n",
        "      <td>-1</td>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -301,8 +301,8 @@
       ],
       "text/plain": [
        "        CaseID              part  v_pred  pred  gt  fp  fn inspect remarks\n",
-       "240   10053736  air_conditioning      -1     0   0   0   0    None    None\n",
-       "420   10053736            airbag      -1     1   0   1   0    None    None\n",
+       "240   10053736  air_conditioning      -1     1   0   1   0    None    None\n",
+       "420   10053736            airbag      -1     0   0   0   0    None    None\n",
        "0     10053736            bonnet       0     0   1   0   1    None    None\n",
        "30    10053736      bumper_front       1     1   1   0   0    None    None\n",
        "330   10053736       bumper_rear       0     0   0   0   0    None    None\n",
@@ -316,7 +316,7 @@
        "[1020 rows x 9 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +336,7 @@
        "34"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
        "750"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +377,7 @@
        "0.20533333333333334"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -449,18 +449,6 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>60</th>\n",
-       "      <td>10053736</td>\n",
-       "      <td>grille</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>120</th>\n",
        "      <td>10053736</td>\n",
        "      <td>headlamp_lh</td>\n",
@@ -485,6 +473,18 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <th>211</th>\n",
+       "      <td>10142635</td>\n",
+       "      <td>door_front_rh</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -495,6 +495,18 @@
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>538</th>\n",
+       "      <td>13045105</td>\n",
+       "      <td>wheel</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>59</th>\n",
@@ -533,18 +545,6 @@
        "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>419</th>\n",
-       "      <td>13127647</td>\n",
-       "      <td>engine</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>None</td>\n",
-       "      <td>None</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>179</th>\n",
        "      <td>13127647</td>\n",
        "      <td>headlamp_rh</td>\n",
@@ -558,27 +558,27 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>129 rows × 9 columns</p>\n",
+       "<p>103 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       CaseID          part  v_pred  pred  gt  fp  fn inspect remarks\n",
-       "0    10053736        bonnet       0     0   1   0   1    None    None\n",
-       "390  10053736        engine       1     1   0   1   0    None    None\n",
-       "60   10053736        grille       0     0   1   0   1    None    None\n",
-       "120  10053736   headlamp_lh       1     1   0   1   0    None    None\n",
-       "360  10053736          misc       1     1   0   1   0    None    None\n",
-       "..        ...           ...     ...   ...  ..  ..  ..     ...     ...\n",
-       "59   13127647  bumper_front       1     1   0   1   0    None    None\n",
-       "359  13127647   bumper_rear       1     1   0   1   0    None    None\n",
-       "989  13127647  door_rear_lh       1     1   0   1   0    None    None\n",
-       "419  13127647        engine       1     1   0   1   0    None    None\n",
-       "179  13127647   headlamp_rh       1     1   0   1   0    None    None\n",
+       "       CaseID           part  v_pred  pred  gt  fp  fn inspect remarks\n",
+       "0    10053736         bonnet       0     0   1   0   1    None    None\n",
+       "390  10053736         engine       1     1   0   1   0    None    None\n",
+       "120  10053736    headlamp_lh       1     1   0   1   0    None    None\n",
+       "360  10053736           misc       1     1   0   1   0    None    None\n",
+       "211  10142635  door_front_rh       1     1   0   1   0    None    None\n",
+       "..        ...            ...     ...   ...  ..  ..  ..     ...     ...\n",
+       "538  13045105          wheel       1     1   0   1   0    None    None\n",
+       "59   13127647   bumper_front       1     1   0   1   0    None    None\n",
+       "359  13127647    bumper_rear       1     1   0   1   0    None    None\n",
+       "989  13127647   door_rear_lh       1     1   0   1   0    None    None\n",
+       "179  13127647    headlamp_rh       1     1   0   1   0    None    None\n",
        "\n",
-       "[129 rows x 9 columns]"
+       "[103 rows x 9 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,16 +600,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.1264705882352941"
+       "0.10098039215686275"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -657,8 +657,8 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>400</th>\n",
-       "      <td>10388238</td>\n",
+       "      <th>402</th>\n",
+       "      <td>10618351</td>\n",
        "      <td>engine</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -686,11 +686,11 @@
       ],
       "text/plain": [
        "       CaseID         part  v_pred  pred  gt  fp  fn inspect remarks\n",
-       "400  10388238       engine       1     0   0   0   0    None    None\n",
+       "402  10618351       engine       1     0   0   0   0    None    None\n",
        "164  11019580  headlamp_rh       1     0   1   0   1    None    None"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +730,7 @@
        "       'windscreen_rear'], dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,16 +741,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.13510253317249699"
+       "0.1519903498190591"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -762,16 +762,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4083769633507853"
+       "0.28272251308900526"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -783,16 +783,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8137254901960784"
+       "0.8235294117647058"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,14 +804,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8137254901960784\n"
+      "0.8235294117647058\n"
      ]
     }
    ],
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -853,7 +853,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8 (main, Nov 24 2022, 14:13:03) [GCC 11.2.0]"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
