Clean label based on case study findings Fixes #50

--- a/src/analysis/case_study/get_partlist_label.ipynb
+++ b/src/analysis/case_study/get_partlist_label.ipynb
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -638,6 +638,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>headlamp_rh</th>\n",
        "      <th>engine</th>\n",
        "      <th>airbag</th>\n",
        "      <th>front_panel</th>\n",
@@ -647,7 +648,6 @@
        "      <th>fender_front_rh</th>\n",
        "      <th>door_mirror_rh</th>\n",
        "      <th>rear_quarter_lh</th>\n",
-       "      <th>interior</th>\n",
        "      <th>...</th>\n",
        "      <th>fog_lamp_lh</th>\n",
        "      <th>tail_lamp_rh</th>\n",
@@ -664,8 +664,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>248150</th>\n",
-       "      <td>1</td>\n",
        "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -688,18 +688,18 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
+       "<p>1 rows × 22 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        engine  airbag  front_panel  undercarriage  wheel  fender_front_lh  \\\n",
-       "248150       1       0            0              0      0                0   \n",
+       "        headlamp_rh  engine  airbag  front_panel  undercarriage  wheel  \\\n",
+       "248150            0       1       0            0              0      0   \n",
        "\n",
-       "        fender_front_rh  door_mirror_rh  rear_quarter_lh  interior  ...  \\\n",
-       "248150                0               0                0         0  ...   \n",
+       "        fender_front_lh  fender_front_rh  door_mirror_rh  rear_quarter_lh  \\\n",
+       "248150                0                0               0                0   \n",
        "\n",
-       "        fog_lamp_lh  tail_lamp_rh  windscreen_front  rear_compartment  \\\n",
-       "248150            0             0                 0                 0   \n",
+       "        ...  fog_lamp_lh  tail_lamp_rh  windscreen_front  rear_compartment  \\\n",
+       "248150  ...            0             0                 0                 0   \n",
        "\n",
        "        rear_panel  rear_quarter_rh  door_rear_rh  door_mirror_lh  \\\n",
        "248150           0                0             0               0   \n",
@@ -707,10 +707,10 @@
        "        door_rear_lh  windscreen_rear  \n",
        "248150             0                0  \n",
        "\n",
-       "[1 rows x 21 columns]"
+       "[1 rows x 22 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
